--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/magdaniele/Diabetes_API#readme",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.3.2",
